fix styling and alignment

--- a/techtonica-projects/recipe-page/styles.css
+++ b/techtonica-projects/recipe-page/styles.css
@@ -12,7 +12,7 @@ h1{
 }
 h3{
     font-family:'Sigmar One', cursive;
-    font-size:1.5em;
+    font-size: 1.5em;
 }
 
 .description {
@@ -20,13 +20,15 @@ h3{
 }
 
 .left {
-    width: 600px;
-    float: left
-    
+   width: 600px;
+   float: left;
+   margin-top: 30px;
 }
 
 .right {
-    width: 600px
-    float: right
+   width: 600px;
+   float: left;
+   margin-left: 30px;
+    
 }
 
